src/test/deca/context/invalid/created/decl_class/new_class_incompatible.deca
// Description :
//    creation d'un objet incompatible avec le type
// Resultats :
//		Erreur contextuelle
//    	Ligne 13 :(3.9) La classe créée ne correspond pas à la classe déclarée

class A{
}
class B{
}

{
A a = new B();
}
